k8s/infrastructure/auth/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - "sso.dev.masonfox.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
